--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### R ###
 # History files
 .Rhistory
 .Rapp.history
@@ -34,3 +35,10 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+
+# R Environment Variables
+.Renviron
+
+### R.Bookdown Stack ###
+# R package: bookdown caching files
+/*_files/
