--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,22 +4,22 @@ new_session: yes
 #   ui:
 #     chapter_name: "Q "
 before_chapter_script: "_scripts.R"
-rmd_files: [
-  "index.Rmd",
-
-  "01-install.Rmd",
-  "install_latest_R.Rmd",
-
-  "03-datavis.Rmd",
-  "datavis_object_not_found.Rmd",
-
-  "04-datasummaries.Rmd",
-  "wrangle_cannot_openfile.Rmd",
-
-  "09-staff.Rmd",
-  "staff_why_contribute.Rmd",
-  "template.Rmd",
-
-  "10-references.Rmd"
-
-]
+# rmd_files: [
+#   "index.Rmd",
+#
+#   "install.Rmd",
+#   "install_latest_R.Rmd",
+#
+#   "03-datavis.Rmd",
+#   "datavis_object_not_found.Rmd",
+#
+#   "04-datasummaries.Rmd",
+#   "wrangle_cannot_openfile.Rmd",
+#
+#   "09-staff.Rmd",
+#   "staff_why_contribute.Rmd",
+#   "template.Rmd",
+#
+#   "10-references.Rmd"
+#
+# ]
